<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical"
    android:visibility="visible">

    <ImageButton
        android:id="@+id/btn"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="36dp"
        android:background="@drawable/button_styles"
        android:contentDescription="@string/btn_toEmergency"
        android:onClick="changeToEmergency"
        android:padding="10dp"
        android:scaleType="centerInside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn3"
        app:srcCompat="@drawable/ambulanceicon" />

    <ImageButton
        android:id="@+id/btnFindDoctor6"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:background="@drawable/button_styles"
        android:contentDescription="@string/btn_toMedicalshop"
        android:onClick="changeToMedicalShop"
        android:padding="10dp"
        android:scaleType="centerInside"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnFindDoctor4"
        app:srcCompat="@drawable/medicalshopicon" />

    <ImageButton
        android:id="@+id/btn3"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="44dp"
        android:background="@drawable/button_styles"
        android:contentDescription="@string/btn_toaAppointments"
        android:onClick="changeToHistorical"
        android:padding="10dp"
        android:scaleType="centerInside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnFindDoctor"
        app:srcCompat="@drawable/medicalkiticon" />

    <ImageButton
        android:id="@+id/btnFindDoctor4"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:background="@drawable/button_styles"
        android:contentDescription="@string/btn_toHistorical"
        android:onClick="changeToAppointment"
        android:padding="10dp"
        android:scaleType="centerInside"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnHospital"
        app:srcCompat="@drawable/appointmenticon" />

    <android.support.design.widget.BottomNavigationView
        android:id="@+id/bottomNavigationView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:itemIconSize="40dp"
        app:itemIconTint="@color/colorAccent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/bottom_navigation" />

    <ImageButton
        android:id="@+id/btnFindDoctor"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/button_styles"
        android:contentDescription="@string/btn_toDoctor"
        android:onClick="changeToFindDoctors"
        android:padding="10dp"
        android:scaleType="centerInside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/doctoricon" />

    <ImageButton
        android:id="@+id/btnHospital"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:background="@drawable/button_styles"
        android:contentDescription="@string/btn_toHospital"
        android:onClick="changeToHospitals"
        android:padding="10dp"
        android:scaleType="centerInside"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/hospitalicon" />
</android.support.constraint.ConstraintLayout>